--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,52 @@ html, body {
   text-align: center;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.column:hover {
+  opacity: 80%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container5 {
+  background-color: black;
+  color: white;
+  float: left;
+  width: 100%;
+  padding: 5px;
+}
+
+.container5 .desc {
+  text-align: left;
+  font-style: normal;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 35px;
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+  color: white;
+}
+
 .flip-box {
   background-color: transparent;
   width: 450px;
