--- a/styles.css
+++ b/styles.css
@@ -947,5 +947,7 @@ input[type=submit]:hover {
 .contact-container {
   border-radius: 10px;
   background-color: rgb(192, 192, 192);
+  width: 100%;
+  height: auto;
   padding: 20px;
 }
